# azari-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
docs/: recipe.md
src/: lib.rs  main.rs
src/builder/: builddir.rs  builder.rs  command.rs  error.rs  metadata.rs  mod.rs  stage.rs  utils.rs
src/cli/: build.rs  clear.rs  images.rs  install.rs  mod.rs  push.rs  rollback.rs  schema.rs  status.rs  switch.rs  unlock.rs  upgrade.rs
src/cli/generate/: mod.rs  schema.rs  shell.rs
src/distro/: arch.rs  common.rs  debian.rs  fedora.rs  mod.rs  ubuntu.rs
src/ini/: mod.rs  ser.rs  types.rs
src/receipt/: alt.rs  error.rs  field.rs  import.rs  list.rs  map.rs  mod.rs  path.rs  receipt.rs  source.rs  unique.rs
src/receipt/fields/: distro.rs  files.rs  from.rs  hostname.rs  image.rs  import.rs  install.rs  mod.rs  name.rs  packages.rs  services.rs  systemd.rs  users.rs
src/receipt/systemd/: entry.rs  field.rs  path.rs  service.rs  socket.rs  target.rs  timer.rs  unit.rs
src/recipe/: alt.rs  error.rs  field.rs  list.rs  map.rs  mod.rs  path.rs  recipe.rs  unique.rs
src/recipe/fields/: distro.rs  files.rs  from.rs  hostname.rs  image.rs  import.rs  install.rs  mod.rs  name.rs  packages.rs  postinstall.rs  preinstall.rs  users.rs
src/recipe/systemd/: entry.rs  field.rs  mod.rs  path.rs  service.rs  socket.rs  target.rs  timer.rs  unit.rs
tests/: fields.rs  files.rs  generate.rs  imports.rs
tests/receipts/: builder.yaml  fields-full.yaml  fields-partial.yaml
tests/receipts/files/: conflict-root.yaml  content.yaml  (+3 more)
tests/recipes/: parse-error.yaml
(+22 files in other folders)
