[package]
name = "azari-cli"
version = "0.1.0"
edition = "2024"
description = "Declarative linux builder. Build your own linux image with ease."

[lib]
name = "azari"
path = "src/lib.rs"

[[bin]]
name = "azari"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.29"
fs_extra = "1"
tempfile = "3.27.0"
thiserror = "2.0.18"
chrono = "0.4.45"
ctrlc = "3.5.2"
merge = { version = "0.2", features = ["derive"] }
serde-value = "0.7.0"
schemars = "1.2.1"
serde_json = "1.0.150"
colored = "3.1.1"
clap_complete = "4.6.7"
clap_complete_nushell = "4.6.0"
